# endgame-trackball-firmware

./: .gitignore  .gitmodules  Dockerfile  README.md  build_dongle_1k.sh  build_trackball.sh  docker-entrypoint.sh
dongle-1k-firmware/: CMakeLists.txt  Kconfig  README.md  prj.conf
dongle-1k-firmware/boards/: efogtech_dongle_1k.overlay  holyiot_dongle_1k.conf
dongle-1k-firmware/src/: bench.c  bench.h  channel_hop_dongle.c  channel_hop_dongle.h  esb_prx.c  esb_prx.h  led_status.c  led_status.h  main.c  shell_relay.c  shell_relay.h  usb_hid.c  usb_hid.h
misc/: ram_report.txt  report_visualizer.html  rom_report.txt
scripts/: build_trackball.sh
